# rag_pipeline

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
src/models/: response.py
src/routes/: ingest_data.py
