[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langchain-qdrant>=1.1.0",
    "pypdf>=6.1.3",
]
